--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width"/>
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7,IE=edge"/>
+    <title>Лучик — приют для кошек</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body class="Page-Body">
