Fixed underline and alignment in ie

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p class="Page-Subtitle">Приют для кошек
       </p>
       <ul class="Page-Contacts">
-        <li class="Page-Contact"><a href="https://vk.com/luchik_dubna" class="Link Link_vk">luchik_dubna</a>
+        <li class="Page-Contact"><a href="https://vk.com/luchik_dubna" class="Link Link_vk">luchik<span class="is-vhidden">_</span>dubna</a>
         </li>
         <li class="Page-Contact"><a href="tel:89265556869" class="Link">8 (926) 555-68-69</a>
         </li>
