Better fonts for win, minify

--- a/index.html
+++ b/index.html
@@ -1,26 +1,1 @@
-<!DOCTYPE html>
-<html class="Page is-dark">
-  <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7,IE=edge"/>
-    <title>Лучик — приют для кошек</title>
-    <link rel="stylesheet" href="style.css"/>
-  </head>
-  <body class="Page-Body">
-    <header id="main" class="Page-Header">
-      <h1 class="Page-Title">Лучик
-      </h1>
-      <p class="Page-Subtitle">Приют для кошек
-      </p>
-      <ul class="Page-Contacts">
-        <li class="Page-Contact"><a href="https://vk.com/luchik_dubna" class="Link Link_vk">luchik<span class="is-vhidden">_</span>dubna</a>
-        </li>
-        <li class="Page-Contact"><a href="tel:89265556869" class="Link">8 (926) 555-68-69</a>
-        </li>
-        <li class="Page-Contact"><a href="tel:89165335275" class="Link">8 (916) 533-52-75</a>
-        </li>
-      </ul>
-    </header><!-- Yandex.Metrika counter --> <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter38531565 = new Ya.Metrika({ id:38531565, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/38531565" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
-  </body>
-</html>
+<!DOCTYPE html><html class="Page is-dark"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width"/><meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7,IE=edge"/><title>Лучик — приют для кошек</title><link rel="stylesheet" href="style.css"/></head><body class="Page-Body"><header id="main" class="Page-Header"><h1 class="Page-Title">Лучик</h1><p class="Page-Subtitle">Приют для кошек</p><ul class="Page-Contacts"><li class="Page-Contact"><a href="https://vk.com/luchik_dubna" class="Link Link_vk">luchik<span class="is-vhidden">_</span>dubna</a></li><li class="Page-Contact"><a href="tel:89265556869" class="Link">8 (926) 555-68-69</a></li><li class="Page-Contact"><a href="tel:89165335275" class="Link">8 (916) 533-52-75</a></li></ul></header><!-- Yandex.Metrika counter --> <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter38531565 = new Ya.Metrika({ id:38531565, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/38531565" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter --></body></html>
